<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@android:color/white" >

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:padding="10dp"
		app:popupTheme="@style/AppTheme.PopupOverlay">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textColor="@android:color/black"
			android:textSize="24sp"
			android:text="@string/title_add_schedule" />

		<Button
			android:id="@+id/btn_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:textColor="@color/colorPrimary"
			android:text="@string/btn_text_save"
			android:textSize="18sp"
			android:background="@android:color/transparent"
			style="?attr/buttonBarStyle" />

		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:textColor="@color/colorPrimary"
			android:text="@string/btn_text_cancel"
			android:textSize="18sp"
			android:background="@android:color/transparent"
			style="?attr/buttonBarStyle" />

	</androidx.appcompat.widget.Toolbar>

	<View
		android:layout_width="match_parent"
		android:layout_height="15dp"
		android:background="@color/colorBack" />

	<TextView
		android:id="@+id/text_day_n"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="@android:color/black"
		android:paddingStart="30dp"
		android:paddingTop="10dp"
		android:paddingEnd="30dp"
		android:paddingBottom="10dp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="15dp"
		android:background="@color/colorBack" />

	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center"
		android:padding="15dp" >

		<RadioButton
			android:id="@+id/btn_normal_schedule"
			android:layout_marginEnd="5dp"
			android:text="@string/btn_text_normal_schedule"
			android:textColor="@android:color/white"
			style="@style/schedule_radio_button"
			android:checked="true" />

		<RadioButton
			android:id="@+id/btn_move_schedule"
			android:layout_marginStart="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_text_move_schedule"
			android:textColor="@color/colorGrayLight"
			style="@style/schedule_radio_button"/>

	</RadioGroup>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginStart="40dp"
		android:layout_marginEnd="40dp"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="15dp">

		<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:layout_marginEnd="5dp"
			android:hint="@string/hint_title"
			android:inputType="text"
			android:autofillHints="no" />

		<EditText
			android:id="@+id/schedule_time"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginStart="5dp"
			android:hint="@string/hint_time"
			android:inputType="time"
			android:autofillHints="no"
			android:clickable="true" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginStart="40dp"
		android:layout_marginEnd="40dp">

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:hint="@string/hint_place"
			android:inputType="text"
			android:autofillHints="no" />

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="25dp"
			android:hint="@string/hint_memo"
			android:inputType="text"
			android:autofillHints="no" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_text_photo"
			android:textSize="18sp"
			android:textColor="@color/colorPrimary"
			android:drawableStart="@drawable/dr_photo"
			android:drawablePadding="10dp"
			android:paddingStart="10dp"
			android:paddingEnd="10dp"
			android:background="@android:color/transparent"/>

	</LinearLayout>

</LinearLayout>