<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@android:color/white"
		android:padding="10dp"
		app:popupTheme="@style/AppTheme.PopupOverlay">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textColor="@android:color/black"
			android:textSize="24sp"
			android:text="@string/title_edit_travel" />

		<Button
			android:id="@+id/btn_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:textColor="@color/colorPrimary"
			android:text="@string/btn_text_save"
			android:textSize="18sp"
			android:background="@android:color/transparent"
			style="?attr/buttonBarStyle" />

		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:textColor="@color/colorPrimary"
			android:text="@string/btn_text_cancel"
			android:textSize="18sp"
			android:background="@android:color/transparent"
			style="?attr/buttonBarStyle" />

	</androidx.appcompat.widget.Toolbar>

	<include
		layout="@layout/content_travel_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<!--커버 이미지 레이아웃-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="10dp"
		android:background="@android:color/white">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginStart="20dp"
			android:layout_gravity="start"
			android:text="@string/btn_text_cover_img"
			android:textColor="@android:color/black"
			android:textSize="17sp" />

		<ImageView
			android:id="@+id/btn_re_pick_cover_img"
			android:layout_width="0dp"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			android:src="@color/colorBack"
			android:clickable="true"
			android:scaleType="centerCrop"
			android:contentDescription="@string/cover_img" />

	</LinearLayout>

</LinearLayout>